<resources>
    <string name="app_name">Resumo Financeriro</string>
    <string name="app_titulo_caixa">Resumo</string>


    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelar">Cancelar</string>
    <string name="apagar">Apagar</string>

    <!-- Saldos e Contas -->
    <string name="app_total">Valor Total</string>
    <string name="app_investidoSaldo">Investido</string>
    <string name="app_SaldoEmConta">Saldo em Conta</string>
    <string name="app_debitosPendentes">Debitos Pendentes</string>
    <string name="app_futuro">Saldo Apos Pagar Tudo</string>
    <string name="app_MercadoPago">Mercado Pago</string>
    <string name="app_Alios">Ailos</string>
    <string name="app_Nubank">Nubank</string>
    <string name="app_Previdencia">Pevidencias Privada</string>
    <string name="app_XpDigital">XP conta digital</string>
    <string name="app_XpInvestimetos">XP Investimetnos</string>
    <string name="app_crypto">Cryptomoedas</string>
    <string name="app_previdenciaTotal">Saldo Total em Previdencias</string>
    <string name="app_previdenciaQuanta">Previdencia Quanta</string>
    <string name="app_previdenciaTGrao">Previdencia Grão</string>
    <string name="app_attData">Ultima Atualização</string>
    <string name="app_contasTitulo">Contas Bancarias</string>
    <string name="app_textNomebanco">Nome do banco Exemplo</string>
    <string name="minhas_contas">Minhas Contas</string>
    <string name="addConta">Adicionar Contas</string>
    <string name="hintAddNome">Nome</string>
    <string name="radioContaCorrente">Conta Corrente</string>
    <string name="radioInvestimentos">Investimentos</string>
    <string name="botaoAdicnionartext">Adicionar Conta</string>
    <string name="apagarContaMesnsagem">Você realmente deseja apagar está conta? Você não podera recuperar novamente</string>
    <string name="apagarAtivoMesnsagem">Você realmente deseja apagar este Ativo? Você não podera recuperar novamente</string>

    <!-- Erros de Adição -->
    <string name="add_error_name">Você precisa dar um nome para essa conta.</string>
    <string name="add_error_data">Você escolher o tipo da conta.</string>
    <string name="add_error_img">Você precisa escolher uma imagem.</string>

    <!-- Navegação e Geral -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="app_tranzacao">Adicionar Tranzação</string>
    <string name="carregando">Carregando...</string>

    <!-- Login -->
    <string name="login_welcome">Bem-vindo de volta!</string>
    <string name="login_subtitle">Acesse sua conta para continuar</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Senha</string>
    <string name="login_forgot_password">Esqueceu a senha?</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="login_no_account">Não tem uma conta? </string>
    <string name="login_sign_up">Cadastre-se</string>
    <string name="action_sign_in">Entrar ou cadastrar</string>
    <string name="welcome">Bem-vindo!</string>
    <string name="invalid_username">Usuário inválido</string>
    <string name="invalid_password">A senha deve ter mais de 5 caracteres</string>
    <string name="login_failed">Falha no login</string>
    <string name="login_failed_nome">Você precisa digitar seu nome.</string>
    <string name="login_failed_email">Você precisa digitar seu email.</string>
    <string name="login_failed_password">Você precisa digitar sua senha.</string>

    <!-- Cadastro -->
    <string name="cadastro_title">Crie sua conta</string>
    <string name="cadastro_subtitle">Preencha os dados abaixo para começar</string>
    <string name="prompt_name">Nome completo</string>
    <string name="action_register">Cadastrar</string>
    <string name="cadastro_already_have_account">Já tem uma conta?</string>
    <string name="login_sign_in">Entrar</string>

    <!-- Strings para Banco Aberto Layout Moderno -->
    <string name="string_adTrazacao_title">Nova Transação</string>
    <string name="valor">Valor (R$)</string>
    <string name="debito">Débito</string>
    <string name="credito">Crédito</string>

    <string name="descricaoHistorico">Descrição (Opicional)</string>

    <!-- Status de Transação -->
    <string name="addTraz_Sucess">Adicionado com sucesso!</string>
    <string name="addTraz_failed">Valor inválido!</string>
    <string name="addTraz_failed2">Erro ao adicionar tranzação, favor tente novamente.</string>

    <!-- Corretora -->
    <string name="corretora_title">Minha Corretora</string>
    <string name="corretora_total_investido">Total Investido</string>
    <string name="corretora_meus_investimentos">Meus Investimentos</string>
    <string name="corretora_add_novo">Novo Ativo</string>
    <string name="corretora_hint_nome">Nome do Ativo (Ex: PETR4, CDB...)</string>
    <string name="corretora_btn_confirmar">Confirmar</string>
    <string name="corretora_label_valor">Valor Atual R$</string>
    <string name="valorNull">Você precisa digitar um valor</string>
    <string name="valorIdUser">Erro ao procurar usuario</string>
    <string name="valorIdConta">Erro ao procurar conta</string>
    <string name="valorErroA">Erro ao salvar este ativo</string>
    <string name="BuscarErro">Erro ao carregar suas contas</string>
    <string name="ApagarErro">Erro ao apagar esta conta</string>
    <string name="editarErro">Erro ao acessar essa conta</string>
    <string name="editarErro2">Erro editar, tente novamente</string>
    <string name="editarSucess">Valor Editado com sucesso!</string>
    <string name="editarNull">Você precisa digitar um valor!</string>
    <string name="saldoTotal">Total</string>
    <string name="debitos">Debitos</string>
    <string name="emConta">Saldo em Conta</string>


    <string name="apagarConta">Você realmente quer apagar está conta?</string>



</resources>